--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,11 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.2
+  animated_text_kit: ^4.2.1
+  cloud_firestore: ^3.1.8
+  firebase_core: ^1.12.0
+  firebase_auth: ^3.3.7
+  modal_progress_hud_nsn: ^0.1.0-nullsafety-1
 
 dev_dependencies:
   flutter_test:
